--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         const text = await resp.text();
 
         document.querySelector('header.navbar').innerHTML = text;
+
+
+        document.querySelector('#menu-icon').addEventListener('click', () => {
+
+            document.querySelector('.navbar').classList.toggle('active');
+            console.log('hi')
+        });
+
       })();
 
     </script>
