--- a/index.html
+++ b/index.html
@@ -7,10 +7,70 @@
     <link rel="icon" href="favicon.ico">
     <title>SELECTED WORKS</title>
 
+    <style>
+
+
+      #slideshow {
+        background-color: black;
+        padding: 1vh;
+        display: flex;
+        align-items: center;
+      }
+
+      #slideshow img {
+        width: 40vw;
+        display: block;
+        margin: 0 auto;
+      }
+
+      .left-arrow-container {
+        position: relative;
+        left: 20%;
+      }
+      .right-arrow-container {
+        position: relative;
+        right: 20%;
+      }
+
+      .arrow {
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 1vh;
+      }
+
+      .right {
+        transform: rotate(-45deg);
+      }
+
+      .left {
+        transform: rotate(135deg);
+      }
+
+
+      @media (max-width: 800px) {
+
+        #slideshow img {
+          width: 60vw;
+        }
+
+    </style>
   </head>
   <body>
 
     <header class="navbar"></header>
+
+    <article id="slideshow">
+      <div class="left-arrow-container">
+        <i class="arrow left"></i>
+      </div>
+
+      <img id="slide-img" src="mine.jpg" />
+
+      <div class="right-arrow-container">
+        <i class="arrow right"></i>
+      </div>
+    </article>
 
     <script defer>
 
@@ -30,6 +90,11 @@
         });
 
       })();
+
+      document.querySelector('.right-arrow-container').addEventListener('click', () => {
+
+
+      });
 
     </script>
 
