modified directory structure

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
       margin: 0 auto;
     }
 
-    .left-arrow-container {
+    .arrow-left-container {
       position: relative;
       left: 20%;
     }
-    .right-arrow-container {
+    .arrow-right-container {
       position: relative;
       right: 20%;
     }
@@ -58,11 +58,11 @@
       cursor: pointer;
     }
 
-    .right {
+    .arrow-right {
       transform: rotate(-45deg);
     }
 
-    .left {
+    .arrow-left {
       transform: rotate(135deg);
     }
 
@@ -82,16 +82,16 @@
 
     <article id="slideshow">
 
-      <div class="left-arrow-container invisible">
-        <i class="arrow left"></i>
+      <div class="arrow-left-container invisible">
+        <i class="arrow arrow-left"></i>
       </div>
 
       <div id="img-container">
         <img id="cur-img" src="" />
       </div>
 
-      <div class="right-arrow-container">
-        <i class="arrow right"></i>
+      <div class="arrow-right-container">
+        <i class="arrow arrow-right"></i>
       </div>
 
     </article>
