added exhibitions, separated universal styles

--- a/public/header.html
+++ b/public/header.html
@@ -1,24 +1,18 @@
     <style>
 
-        body {
-            padding: 0;
-            margin: 0;
-        }
-
-        a {
-          text-decoration: none;
-          color: white;
-        }
-
         .navbar {
             height: 15vh;
             background-color: black;
         }
 
+        .navbar a {
+          text-decoration: none;
+          color: white;
+        }
+
         .navbar nav {
             height: 100%;
         }
-
 
         .navbar ul {
             height: 100%;
@@ -106,7 +100,7 @@
                 <div></div>
                 <div></div>
             </div>
-            <li><a href="#">SELECTED WORKS</a></li>
-            <li><a href="#">EXHIBITIONS</a></li>
+            <li><a href="/index.html">SELECTED WORKS</a></li>
+            <li><a href="/EXHIBITIONS/index.html">EXHIBITIONS</a></li>
         </ul>
     </nav>
