--- a/public/index.html
+++ b/public/index.html
@@ -7,47 +7,38 @@
   <link rel="icon" href="favicon.ico">
   <title>SELECTED WORKS</title>
 
+  <link href="./assets/styles/universal-styles.css" rel="stylesheet">
+
   <script src="./assets/scripts/universal-scripts.js" defer></script>
   <script src="./assets/scripts/selected-works.js" async></script>
+
   <style>
 
-    .warning {
-      color: red;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    .invisible {
-      visibility: hidden;
-    }
-
     #slideshow {
-      background-color: black;
       padding: 1vh;
       display: flex;
       align-items: center;
+      justify-content: center;
     }
 
     #img-container {
       margin: 0 auto;
+      margin: 0 5%;
+      height: 40vw;
+      width: 50vw;
+      display: flex;
     }
 
     #cur-img {
-      width: 40vw;
-      height: 50vw;
-      display: block;
       margin: 0 auto;
+      max-width: 100%;
+      object-fit: scale-down;
     }
 
-    .arrow-left-container {
-      position: relative;
-      left: 20%;
-    }
-    .arrow-right-container {
-      position: relative;
-      right: 20%;
+    #cur-img-info {
+      padding-bottom: 5%;
+      font-size: 1.2rem;
+      text-align: center;
     }
 
     .arrow {
@@ -68,9 +59,9 @@
 
     @media (max-width: 800px) {
 
-      #slideshow img {
-        width: 60vw;
-        height: 50vw;
+      .arrow {
+        border-width: 0 2px 2px 0;
+        padding: 0.5vh;
       }
     }
 
@@ -80,21 +71,23 @@
 
   <header class="navbar"></header>
 
-    <article id="slideshow">
+  <article>
 
-      <div class="arrow-left-container invisible">
-        <i class="arrow arrow-left"></i>
-      </div>
+    <main id="slideshow">
+
+      <i class="arrow arrow-left invisible"></i>
 
       <div id="img-container">
         <img id="cur-img" src="" />
       </div>
 
-      <div class="arrow-right-container">
-        <i class="arrow arrow-right"></i>
-      </div>
+      <i class="arrow arrow-right"></i>
 
-    </article>
+    </main>
+
+    <aside id="cur-img-info" />
+
+  </article>
 
   </body>
 </html>
