--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
     #cur-img-info {
       padding-bottom: 5%;
       font-size: 1.2rem;
-      text-align: center;
+      width: 55%;
+      margin: 0 auto;
     }
 
     .arrow {
@@ -75,7 +76,7 @@
 
     <main id="slideshow">
 
-      <i class="arrow arrow-left invisible"></i>
+      <i class="arrow arrow-left"></i>
 
       <div id="img-container">
         <img id="cur-img" src="" />
