don't use index.html in url

--- a/public/header.html
+++ b/public/header.html
@@ -100,7 +100,7 @@
                 <div></div>
                 <div></div>
             </div>
-            <li><a href="/index.html">SELECTED WORKS</a></li>
-            <li><a href="/EXHIBITIONS/index.html">EXHIBITIONS</a></li>
+            <li><a href="/">SELECTED WORKS</a></li>
+            <li><a href="/EXHIBITIONS/">EXHIBITIONS</a></li>
         </ul>
     </nav>
