active page link highlights

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
       text-align: center;
     }
 
+    #cur-img-info div {
+      padding: 0.2rem;
+    }
+
     .arrow {
       border: solid white;
       border-width: 0 3px 3px 0;
