--- a/public/header.html
+++ b/public/header.html
@@ -35,6 +35,9 @@
             font-size: 1.2rem;
         }
 
+        a.active {
+            color: #bc912c;
+        }
         .navbar nav a:hover {
             color: #bc912c;
         }
