--- a/public/EXHIBITIONS/index.html
+++ b/public/EXHIBITIONS/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
-  <title>SELECTED WORKS</title>
+  <title>EXHIBITIONS</title>
 
   <link href="../assets/styles/universal-styles.css" rel="stylesheet">
   <script src="../assets/scripts/universal-scripts.js" defer></script>
