added alt attrs, prioritization hints, fixed menu overlap bug

--- a/public/header.html
+++ b/public/header.html
@@ -38,6 +38,7 @@
         a.active {
             color: #bc912c;
         }
+
         .navbar nav a:hover {
             color: #bc912c;
         }
@@ -65,7 +66,7 @@
         #nav-small-placeholder {
             background-color: inherit;
             position: relative;
-            z-index: 0;
+            z-index: 1;
         }
 
         @media (max-width: 800px) {
@@ -76,6 +77,7 @@
 
             #name {
                 width: auto;
+                font-size: 2rem;
             }
 
             .nav-sublinks {
