--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
       <i class="arrow arrow-left"></i>
 
       <div id="img-container">
-        <img id="cur-img" src="" />
+        <img id="cur-img" src="" loading="eager" decoding="sync" importance="high" />
       </div>
 
       <i class="arrow arrow-right"></i>
