preload img json

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
   <title>SELECTED WORKS</title>
 
   <link href="./assets/styles/universal-styles.css" rel="stylesheet">
-
   <script src="./assets/scripts/universal-scripts.js" defer></script>
+
+  <link rel="preload" href="/images.json" as="fetch" crossorigin>
   <script src="./assets/scripts/selected-works.js" async></script>
 
   <style>
