improved img accessability

--- a/public/index.html
+++ b/public/index.html
@@ -85,14 +85,15 @@
       <i class="arrow arrow-left"></i>
 
       <div id="img-container">
-        <img id="cur-img" src="" loading="eager" decoding="sync" importance="high" />
+        <img id="cur-img" src="" alt="" loading="eager" decoding="sync" importance="high" />
       </div>
 
       <i class="arrow arrow-right"></i>
 
     </main>
 
-    <aside id="cur-img-info"></aside>
+    <!-- same text as img alt -->
+    <aside aria-hidden="true" id="cur-img-info"></aside>
 
   </article>
 
