100% accessible, seo, and ofc best practices

--- a/public/EXHIBITIONS/index.html
+++ b/public/EXHIBITIONS/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="favicon.ico">
+  <meta name="description" content="Art Exhibitions">
+
   <title>EXHIBITIONS</title>
 
-  <link href="../assets/styles/universal-styles.css" rel="stylesheet">
+  <link rel="preload" as="style" href="../assets/styles/universal-styles.css" onload="this.onload=null;this.rel='stylesheet'">
   <script src="../assets/scripts/universal-scripts.js" defer></script>
 
   <style>
