--- a/public/header.html
+++ b/public/header.html
@@ -101,7 +101,7 @@
 
     <nav>
         <div id="name">
-            <a href="">Madison Werner</a>
+            <a href="/">Madison Werner</a>
 
         </div>
         <div id="menu-icon">
